--- a/FORMULARIO.html
+++ b/FORMULARIO.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TITULO UNO PRINCIPAL</title>
+    <title>TITULO UNO PRINCIPAL</title>
+    <title>TITULO UNO PRINCIPAL</title>
 </head>
 <body>
 
